Changelog
=========

after 0.2
---------

- fix links for running plugins so they work for
  http://host/plonesite/@@sampledata, too.
  (not just http://host/@@sampledata)
  [fRiSi]

0.2 (2011-12-02)
----------------

- ``SampledataView.runPlugin`` returns the result of ``Plugin.generate``.
  This makes it easy to check if the plugin was sucessfully run in unittests.

0.1 (2011-01-31)
----------------

- Initial release